syntax = "proto3";

package hoge.v1;

option go_package = "connect-tutorial/src/adapter/grpc/hoge/v1;hogev1";

service HogeService {
  rpc GetHoge(HogeGetRequest) returns (HogeGetResponse) {}
  rpc CreateHoge(HogeCreateRequest) returns (HogeCreateResponse) {}
}

// GetHoge
message HogeGetRequest {
  string id = 1;
}

message HogeGetResponse {
  optional Hoge hoge = 1;
}

// CreateHoge
message HogeCreateRequest {
  Hoge hoge = 1;
}

message HogeCreateResponse {
  Hoge hoge = 1;
}

message Hoge {
  Fuga fuga = 1;
}

message Fuga {
  string piyo = 1;
}

